# gui.cs

./: .editorconfig  .gitignore
Terminal.Gui/Views/: Menu.cs
oldscool/: oldscool.sln
oldscool.cpp/: .gitignore
oldscool.cpp/lib/: CMakeLists.txt  TColors.cpp  TColors.h  library.h
oldscool.cpp/lib/ct/: UTLTASTE.C
oldscool.cpp/ncurses/01-HelloWorld/: CMakeLists.txt  main.cpp
oldscool.cpp/ncurses/02-Atributes/: CMakeLists.txt
oldscool.cpp/ncurses/02_Attributes/: CMakeLists.txt  main.cpp
oldscool.cpp/ncurses/02a_Attributes/: CMakeLists.txt  main.cpp
oldscool.cpp/ncurses/02b_Colours/: CMakeLists.txt  main.cpp
oldscool.cpp/ncurses/02c_acs/: CMakeLists.txt  main.cpp
oldscool.cpp/ncurses/03_Menu/: CMakeLists.txt  main.cpp
oldscool.cpp/ncurses/04_forms/: CMakeLists.txt  main.cpp
oldscool.cpp/oldscool/: CMakeLists.txt  Colors.cpp  Colors.h  EvKeyboard.cpp  EvKeyboard.h  EvMouse.cpp  EvMouse.h  EvProcess.cpp  EvProcess.h  Events.cpp  Events.h  Frame.cpp  Frame.h  Mnu.cpp  Mnu.h  Palette.cpp  Palette.h  Vio.cpp  Vio.h  Win.cpp  Win.h  library.h
oldscool.cpp/oldscool/hi/: EVENT.C
oldscool.cpp/oldscool/qh/: tcolors.h  tmnu.cpp  tvio.cpp  tvio.h  twin.cpp  twin.h
oldscool.cpp/samples/events/: CMakeLists.txt  main.cpp
oldscool.cpp/samples/mnu/: CMakeLists.txt  main.cpp
oldscool.cpp/samples/vio/: CMakeLists.txt  main.cpp
oldscool.cpp/samples/win/: CMakeLists.txt  main.cpp
oldscool/app/: App.csproj  Program.cs
oldscool/lib/: Color.cs  Colors.cs  Frame.cs  Mnu.cs  Msg.cs  Palette.cs  Vio.cs  Win.cs
oldscool/lib/hi/: EVENT.C  MSGWIN.C  WIN.C  WIN.H
oldscool/lib/old/: TColors.cpp  TColors.h  TLst.cpp  TLst.h  TMnu.cpp  TMnu.h  TMsg.cpp  TMsg.h  TVio.cpp  TVio.h  TWin.cpp  TWin.h
oldscool/samples/mnu/: Mnu.csproj  Program.cs
oldscool/samples/vio/: Program.cs  Vio.csproj
oldscool/samples/win/: Program.cs
